# user-service

./: .env  Dockerfile  alembic.ini  dep.md  docker-compose.prod.yml  guide.md  pyproject.toml
.github/workflows/: deploy.yml
src/: main.py
src/api/api_v1/: __init__.py  health.py  users.py
src/api/depends/: __init__.py  user.py
src/core/: config.py  lifespan.py  logging.py
src/core/database/: __init__.py
src/migrations/: env.py
src/migrations/versions/: 0001_create_users.py
src/models/: user.py
src/models/mixins/: __init__.py  created_at.py  id.py  uid.py
src/repositories/: base.py  user.py
src/schemas/: __init__.py  user.py
src/services/: __init__.py  user.py
src/tests/: conftest.py  test_config.py
